<resources>
    <string name="force_restore_backup">Force Restore Backup</string>
    <string name="antirevoke">Anti-Revoke Messages</string>
    <string name="antirevoke_sum">Messages will not be deleted for you</string>
    <string name="ghostmode">Hide Typing</string>
    <string name="ghostmode_sum">Users cannot see that you are typing</string>
    <string name="ghostmode_r">Hide Recording Audio</string>
    <string name="ghostmode_sum_r">Users cannot see that you are recording audio</string>
    <string name="hidetag">Hide \"Forwarded\" Tag</string>
    <string name="hidetag_sum">Forward messages without the tag \"Forwarded\"</string>
    <string name="hidestatusview">Hide Status View</string>
    <string name="hidestatusview_sum">View statuses without users knowing</string>
    <string name="hideread">Hide Blue Ticks</string>
    <string name="hideread_sum">View messages within conversation screen without users knowing</string>
    <string name="perso">Customization</string>
    <string name="segundosnahora">Seconds on Timestamp</string>
    <string name="segundosnahora_sum">Show seconds next to any timestamp in the WhatsApp app</string>
    <string name="textonahora">Text next to Timestamp</string>
    <string name="viewonce">Unlimited View Once</string>
    <string name="viewonce_sum">Allows you to open view once media multiple times</string>
    <string name="antirevokestatus">Anti-Delete Status</string>
    <string name="antirevokestatus_sum">View statuses that users have since deleted</string>
    <string name="hidereceipt">Hide Delivered</string>
    <string name="hidereceipt_sum">Users will not know that their messages have been delivered to you\n(CAUTION: May cause delay in receiving messages)</string>
    <string name="ampm">Time in 12-Hour Format</string>
    <string name="general">General</string>
    <string name="conversation">Conversation Screen</string>
    <string name="novofiltro">Search Functions</string>
    <string name="novofiltro_sum">Choose between Search Icon, Search Bar, or No Search</string>
    <string name="freezelastseen">Freeze Last Seen</string>
    <string name="freezelastseen_sum">Your last seen time will be frozen\n(CAUTION: You will not see any presence updates from other users, like typing, recording, online)</string>
    <string name="removeforwardlimit_sum">Remove forward limit for 5 chats (normal) and 1 chat (multiple times)\n(Note: Use with caution, you may be banned for spam)</string>
    <string name="removeforwardlimit">Remove Forward Limit</string>
    <string name="showname">Show Name</string>
    <string name="showname_sum">Show your profile name at the top of home screen, instead of \"WhatsApp\"</string>
    <string name="showbio_sum">Show your bio below the title of toolbar</string>
    <string name="showbio">Show Bio</string>
    <string name="separate_groups">Separate Groups</string>
    <string name="separate_groups_sum">Separate your chats by: Groups, Private Chats, Status, Calls, Communities</string>
    <string name="blueonreply">Send Blue Ticks upon Reply</string>
    <string name="blueonreply_sum">Sends blue ticks after replying to a message\n(NOTE: Must have \"Hide Blue Ticks\" active)</string>
    <string name="hide_archived_chat">Hide Archived Chats</string>
    <string name="hide_archived_chat_sum">Hide archived chats, to access click 5 times or hold on the \"WhatsApp\" title in the header on Home Screen</string>
    <string name="hide_once_view_seen">Hide View Once Seen</string>
    <string name="hide_once_view_seen_sum">Hide that view one media has been seen</string>
    <string name="call_blocker">Block Calls</string>
    <string name="call_blocker_sum">Block WhatsApp calls based on privacy type</string>
    <string name="show_online_dot_in_conversation_list">Show Online Dot in Conversation List</string>
    <string name="show_online_dot_in_conversation_list_sum">Show a green online dot on home screen\n(NOTE: Must activate show online for everyone in WhatsApp\'s Privacy Settings menu)</string>
    <string name="show_dnd_button">Show DND Button</string>
    <string name="show_dnd_button_sum">Show button for DND Mode on home screen toolbar</string>
    <string name="disable_pinned_limit">Disable Pinned Chats Limit</string>
    <string name="disable_pinned_limit_sum">Disable limit of 3 pinned chats</string>
    <string name="delete_for_everyone_all_messages">Increase limit of &quot;Delete for everyone&quot; option</string>
    <string name="delete_for_everyone_all_messages_sum">Increases the limit to 3 days in the option to delete messages for everyone</string>
    <string name="show_edited_message_history">Show Edited Message History</string>
    <string name="show_edited_message_history_sum">Show edited message history when clicking \"Edited\" on a message</string>
    <string name="hide_tabs_on_home">Hide Tabs on Home</string>
    <string name="hide_tabs_on_home_sum">Hide tabs on the home screen such as Updates, Communities and Calls</string>
    <string name="calls">Calls</string>
    <string name="remove_see_more_button">Remove \"See More\" Button</string>
    <string name="remove_see_more_button_">Disable \"See More\" button and show all long message</string>
    <string name="title_home">Home</string>
    <string name="privacy">Privacy</string>
    <string name="media">Media</string>
    <string name="show_button_to_send_blue_tick">Show Button to send blue tick</string>
    <string name="show_button_to_send_blue_tick_sum">Show Button to send blue tick (mark as read/viewed)</string>
    <string name="enable_filter_chats">Enable filter chats for type</string>
    <string name="enable_filter_chats_sum">Show options to filter chats for groups, contacts and unseen messages</string>
    <string name="enable_confirmation_to_send_sticker">Confirmation Before Sending Sticker</string>
    <string name="enable_confirmation_to_send_sticker_sum">Show a dialog before sending the sticker</string>
    <string name="status">Status</string>
    <string name="verbose_logs">Enable Verbose Logs for Debugger</string>
    <string name="home_screen">Home Screen</string>
    <string name="selection_of_call_type">Enable selection of call type</string>
    <string name="selection_of_call_type_sum">Show an option to select whether you want a call via phone or WhatsApp</string>
    <string name="disable_metaai">Disable Meta Ai Functions</string>
    <string name="disable_metaai_sum">Disable meta ai only for those who have it enabled by default</string>
    <string name="enable_new_chat_button">Enable New Chat Button</string>
    <string name="enable_new_chat_button_sum">Add button in Home Screen to start new chat</string>
    <string name="enable_restart_button">Enable Restart Button</string>
    <string name="enable_restart_button_sum">Add button in Home Screen to Restart App</string>
    <string name="toast_on_delete">Show toast notification on delete message</string>
    <string name="toast_on_delete_sum">Show toast notification if any contact deletes any message</string>
    <string name="hideread_group">Hide Blue Tick in Groups</string>
    <string name="hideread_group_sum">View messages in groups screen without users knowing</string>
    <string name="show_freezeLastSeen_button">Show Freeze Last Seen Button</string>
    <string name="show_freezeLastSeen_sum">Show button for Freezing Last Seen on home screen toolbar</string>
    <string name="show_online_last_seen_in_conversation_list">Show Online/Last seen in Conversation List</string>
    <string name="show_online_last_seen_in_conversation_list_sum">Show a text online or last seen on home screen\n(NOTE: Must activate show online for everyone in WhatsApp\'s Privacy Settings menu)</string>
    <string name="show_toast_on_contact_online">Show toast on contact online</string>
    <string name="show_toast_on_contact_online_sum">Show a toast when a contact is online</string>
    <string name="antidisappearing">Anti Disappearing Messages</string>
    <string name="antidisappearing_sum">Temporary messages will not be deleted for you</string>
    <string name="disable_default_emojis">Disable Default Emojis</string>
    <string name="disable_default_emojis_sum">Disables WhatsApp\'s default emojis and uses system emojis.</string>
    <string name="new_ui_group_filter">New UI Group Filter</string>
    <string name="new_ui_group_filter_sum">Include a new filter on the home screen to separate groups and conversations.</string>
    <string name="call_blocking_type">Call blocking type</string>
    <string name="call_blocking_type_sum">Select the method by which the call blocking will be done.</string>
    <string name="toast_on_viewed_message">Show toast on viewed your message</string>
    <string name="toast_on_viewed_message_sum">Shows a toast if someone views your message</string>
    <string name="contact_block_list">List of blocked contacts</string>
    <string name="contact_white_list">List of allowed contacts</string>
    <string name="no_contacts_selected">No contacts selected</string>
    <string name="contact_were_selected">%d contact(s) were selected</string>
    <string name="stamp_copied_messages">Remove Stamp from Copied Messages</string>
    <string name="stamp_copied_messages_sum">Removes name and date when copying more than one message</string>
    <string name="double_click_to_react">Enable Double Click to React</string>
    <string name="double_click_to_like_sum">Activates the possibility of double-clicking on the message to react it</string>
    <string name="custom_reaction">Custom Reaction</string>
    <string name="custom_reaction_sum">Select which reaction will be sent when double clicking on the message</string>
    <string name="hide_audio_seen">Hide audio seen</string>
    <string name="hide_audio_seen_sum">Hides the sending of audio reading when listening to it</string>
    <string name="ghost_mode_title">Show Ghost Mode Button</string>
    <string name="ghost_mode_sum">Show a Ghost Mode button on the home screen toolbar</string>
    <string name="show_menu_buttons_as_icons">Show menu buttons as icons</string>
    <string name="show_menu_buttons_as_icons_sum">Shows menu buttons on the home screen as icons for easy access to them</string>
    <string name="enable_wa_enhancer_button">Enable Wa Enhancer Button</string>
    <string name="enable_wa_enhancer_button_sum">Add button in Home Screen to open Wa Enhancer</string>
    <string name="custom_privacy_per_contact">Custom Privacy per contact</string>
    <string name="custom_privacy_per_contact_sum">Activate the custom privacy button on the contact information screen</string>
    <string name="google_translate">Enable Google Translate</string>
    <string name="google_translate_sum">Replaces Whatsapp\'s native translator with Google Translate</string>
    <string name="always_online">Always Online</string>
    <string name="always_online_sum">Show you online even if you minimize WhatsApp (Doesn\'t work if you remove it from recents)</string>
    <string name="additional_call_information">Additional call information</string>
    <string name="additional_call_information_sum">Receive a notification with additional information after the call ends</string>
    <string name="show_chat_broadcast_icon">Show chat broadcast icon</string>
    <string name="show_chat_broadcast_icon_sum">Shows an icon if the contact sent a message via broadcast</string>
    <string name="view_seen_tick">View Seen Tick</string>
    <string name="view_seen_tick_sum">Show an icon if the message view was sent to the recipient or unique view was seen</string>
    <string name="disable_status_in_the_profile_photo">Disable Status in the profile photo</string>
    <string name="disable_status_in_the_profile_photo_sum">Disables the circle that appears in the profile photo of each contact when there is new status</string>
</resources>