<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_general"
        android:title="@string/general" />

    <item
        android:id="@+id/navigation_privacy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_media"
        android:icon="@drawable/ic_media"
        android:title="@string/media" />

    <item
        android:id="@+id/navigation_colors"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/perso" />

    <item
        android:id="@+id/navigation_recordings"
        android:icon="@drawable/ic_recording"
        android:title="@string/recordings_manager" />


</menu>